version 2.0.13 (cvs):
	* Additional translations (see po/ChangeLog).

version 2.0.12 (2008-05-09):
	* Make debug, quiet and build_suggestion_menu static in gtkspell.c
	  to prevent exporting them.
	* One additional translation (see po/ChangeLog).
	* Move spell-checking library from Libs to Libs.private in
	  gtkspell-2.0.pc 
	* Update autogen.sh to use intltool
	* Fix warnings with -Wstrict-prototypes by Richard Laager

version 2.0.11 (2005-05-27):
	* Re-enable apostrophe word-breaking workarounds (GNOME bug #97545).
	* Additional translations (see po/ChangeLog).

version 2.0.10 (2005-02-27):
	* Re-release 2.0.9 with debug mode turned off.
	* One additional translation (see po/ChangeLog).

version 2.0.9 (2005-02-22):
	* Enable building outside of srcdir (Mike Castle)
	* Use bind_textdomain_codeset to set UTF-8 encoding for all translations.
	* Do not delete the GtkTextTag from the tag table (needed for shared
	  tag tables).
	* Disable word-breaking workarounds when Pango >= 1.8.0 (GNOME bug #97545).
	* Many additional translations (see po/ChangeLog).

version 2.0.8 (2004-10-08):
	* Fix how the GtkTextTag is created to work with shared tag tables.
	* Additional translation (see po/ChangeLog).

version 2.0.7 (2004-08-22):
	* Activating the menu through a keybinding now properly checks the
	  word currently under the cursor.
	* Prevent the trampling on an application's textdomain (Stu Tomlinson).
	* Additional translations (see po/ChangeLog).

version 2.0.6 (2004-06-26):
	* Use new PANGO_UNDERLINE_ERROR style when available to highlight
	  misspelled words with squiggly red underline.
	* Internationalize with GNU Gettext. All five strings now translatable.
	  Thanks to Adriano Del Vigna de Almeida <katmandu@fs.inf.br>
	* New po/ChangeLog to track translation additions/updates.

version 2.0.5 (2004-01-26):
	* Don't check numeric words.  Combined with word breaking changes 
	  recently committed to Pango, this will handle all letter-number
	  combinations nicely.